Fix video formatting and styling on Safari/webkit

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,7 +5,7 @@ header.header {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
   padding-right: 75px;
   background-color: #fff;
   gap: 50px;
@@ -34,7 +34,7 @@ header > div:hover {
   header.header {
     position: absolute;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     flex-direction: column;
     top: 50%;
     left: 50%;
